ioc demo